fix tests and decl documentation